# llama-dna-1.0-8b-instruct_moddel_convert_for_ollama

./: .gitignore  README.md  main.py  pyproject.toml
src/llama_dna_convert/: __init__.py  convert_model.py
