[project]
name = "llama-dna-convert"
version = "0.1.0"
description = "Convert dnotitia/llama-dna-1.0-8b-instruct model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "sentencepiece>=0.1.99",
    "protobuf>=4.21.0",
    "huggingface-hub>=0.17.0",
    "safetensors>=0.4.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
gpu = [
    "bitsandbytes>=0.41.0",
]

[project.scripts]
convert-model = "llama_dna_convert.convert_model:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llama_dna_convert"]

[tool.uv]
dev-dependencies = [
    "ipython>=8.0.0",
]
